--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="resume.pdf"                             >resume(.pdf)</a>&nbsp;&nbsp;
         <a href="publications.html"                      >Publications</a>&nbsp;&nbsp;
         <a href="classes/index.html"                     >Classes     </a>&nbsp;&nbsp;
-        <a href="study/index.html"                       >Study notes </a>&nbsp;&nbsp;
+        <a href="study/index.html"                       >Study memo  </a>&nbsp;&nbsp;
         <a href="https://github.com/TakashiIjiri"        >github      </a>&nbsp;&nbsp;
         <a href="http://www.facebook.com/takashi.ijiri.5">facebook    </a>
     </b></font>
@@ -113,7 +113,7 @@
     <tr><td>April 2013 - </td> <td>March 2015 </td> <td><b>Visiting Associate Professor   </b>, Dept. Human Mechanical Systems &amp; Design, Hokkaido U.</td></tr>
     <tr><td>April 2009 - </td> <td>March 2012 </td> <td><b>Postdoctoral Researcher        </b>, Biological infrastructure construction team, RIKEN.</td></tr>
     <tr><td>April 2004 - </td> <td>March 2009 </td> <td><b>Graduate student               </b>, The University of Tokyo. Mentored by Prof. Takeo Igarashi.</td></tr>
-    <tr><td>April 2000 - </td> <td>March 2004 </td> <td><b>Undergrad. student          </b>, Tokyo Institute of Technology. Mentored by Prof. Etsuya Shibayama.</td></tr>
+    <tr><td>April 2000 - </td> <td>March 2004 </td> <td><b>Undergrad. student             </b>, Tokyo Institute of Technology. Mentored by Prof. Etsuya Shibayama.</td></tr>
     </table>
     <br>
 
@@ -138,10 +138,23 @@
 <tbody>
 
 <!-- 2016 -->
+<tr>
+    <td><img src="images/2016CogKnife.png"></td>
+    <td><b>CogKnife: Food Recognition From Their Cutting Sounds</b> <br>
+    T. Kojima, <b>T. Ijiri</b>, J. White,   H. Kataoka, A. Hirabayash<br>
+    project page <br>
+    CEA2016
+</tr>
 
-<!-- CogKnife -->
-<!-- Heart    -->
+<tr>
+    <td><img src="images/2016hearttouch.png"></td>
+    <td><b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b> <br>
+        K. Nakashima, Y. Koyama, T. Igarashi, <b>T. Ijiri</b>, S. Inada, K. Nakazawa<br>
+        Eurographics 2016 short paper 
+</tr>
 
+
+<!-- 2015 -->
 
 <tr>
     <td><img src="images/tf2.png"></td>
@@ -254,6 +267,11 @@
 
 
 
+</tbody>
+</table>
+
+
+
 <h1>Software</h1>
 
 <table class="PubTable">
@@ -286,12 +304,16 @@
 <h1>Services</h1>
 
 <div style="padding: 1em 0 1em 3em; line-height:160%;">
+2016. Local executive committee. Pacific Graphics. <br>
+2016. International Program Committee. Pacific Graphics. <br>
+2016. Organizer. ACM CHI 2016 Symposium on Emerging Japanese HCI Research Collection. <br>
+2016. Program Committee. VC/GCAD simposium. <br>
 2015. Program Committee. VC/GCAD simposium. <br>
 2014. Program Committee. The 20th ACM Symposium on Virtual Reality Software Technology. <br>
 2014. Program Committee. Visual Computing / グラフィクスと CAD 合同シンポジウム 2014.<br>
 2013 - 2015. Committee. 情報処理学会 グラフィクスとCAD.<br>
 2010. Program Committee. Pacific Graphics 2010.<br>
-<b>Paper review</b>, TOG 2015, CGF 2014, EuroGraphics2014, SIGGRAPH 2014, SIGGRAPH ASIA 2014, SIGGRAPH ASIA 2013, and so on.<br>
+<b>Paper review</b>SIGGRAPH 2016, TOG 2016, TOG 2015, CGF 2014, EuroGraphics2014, SIGGRAPH 2014, SIGGRAPH ASIA 2014, SIGGRAPH ASIA 2013, and so on.<br>
 </div>
 
 
