--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
 <tr>
-    <td><img src="images/heartsim.gif"></td>
+    <td><img src="images/HeartSim.gif"></td>
     <td><b>A Kinematic Approach for Efficient and Robust Simulation of the Cardiac Beating Motion</b><br/>PLoS ONE, 2012. 
         <a href="ProjHeartSim/index.html">Project Page</a></td>
 </tr>
@@ -243,7 +243,7 @@
 
 <!-- 2006 -->
 <tr>
-    <td><img src="images/flowerCreator.png"></td>
+    <td><img src="images/FlowerCreator.png"></td>
     <td><b>Seamless Integration of Initial Sketching and Subsequent Detail Editing in Flower Modeling</b><br/>Eurographics 2006.
      <a href="ProjSketchPlant/index.html">Project Page</a></td>
 </tr>
