--- a/study/miscs/Curvature.htm
+++ b/study/miscs/Curvature.htm
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"  "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="ja">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<meta charset="utf-8">
 <title>曲線曲面の曲率</title>
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
@@ -80,6 +79,11 @@ div.WordSection1
 <div align="center">
   <div class="WordSection1 c1">
     <p class="c2"><strong><span class="c4">微分幾何学1</span></strong></p>
+
+
+      <p><a href="../index.html">戻る</a> <a href="../../index.html">topへ</a><br></p>
+
+
     <p><strong><span class="c5">&nbsp;</span></strong></p>
     <p><strong><span class="c5">概要:&nbsp;</span></strong><span class="c5">パラメータ表示された曲線と曲面の曲率の導出をまとめておく．</span></p>
     <p><span class="c5">&nbsp;</span></p>
