--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
 <tr>
     <td><img src="images/vizkidney.png"></td>
-    <td><b>Prediction of open urinary tract in laparoscopic partial nephrectomy by virtual resection plane visualization</b><br>BMC Urology 2014 
-    D. UenoEmail, K. Makiyama, H. Yamanaka, <b>T. Ijiri</b>, H. Yokota, and Y. Kubota.
+    <td><b>Prediction of open urinary tract in laparoscopic partial nephrectomy by virtual resection plane visualization</b><br>BMC Urology 2014<br> 
+    D. Ueno, K. Makiyama, H. Yamanaka, <b>T. Ijiri</b>, H. Yokota, and Y. Kubota.
     <a href="http://bmcurol.biomedcentral.com/articles/10.1186/1471-2490-14-47">paper - Open access</a></td>
 </tr>
 
