--- a/publications.html
+++ b/publications.html
@@ -284,11 +284,11 @@
 
 
 <ol class="PubList">
-
-
-<li>中沢一雄, 井尻敬, 小山裕己, 中島一崇, 五十嵐健夫, 稲田慎, 原口亮, 奈良崎大士, 岩田倫明, 芦原貴司, 神崎歩, 黒嵜健一, 坂口平馬, 市川肇, 白石公, 先天性疾患心臟の形状抽出と心臓レプリカを想定したマルチタッチブラウザ開発, 第51回小児循環器学会総会・学術集会, 2015/7/16－18, ホテル日航東京．</li>
+    
+<li>柴田基, 稲室憲人, 井尻敬, 平林晃, "SDMMに基づくCS-MRIのための高精度再構成アルゴリズム", 信学技報, vol. 116, no. 36, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016/5/19.<a href="http://www.ieice.org/ken/paper/20160519nbIk/">link</a></li>
 <li>井尻敬, "医用画像のための対話的領域分割法とその植物モデリングへの応用", 生体医用画像研究会 第3回若手発表会, 2016/03/12</li>
 <li>上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. "先天性心疾患三次元モデル作成ツール",情報処理学会第78回全国大会，2016/3/10-12, 慶応大学矢上キャンパス．（査読なし）</li>
+<li>中沢一雄, 井尻敬, 小山裕己, 中島一崇, 五十嵐健夫, 稲田慎, 原口亮, 奈良崎大士, 岩田倫明, 芦原貴司, 神崎歩, 黒嵜健一, 坂口平馬, 市川肇, 白石公, 先天性疾患心臟の形状抽出と心臓レプリカを想定したマルチタッチブラウザ開発, 第51回小児循環器学会総会・学術集会, 2015/7/16－18, ホテル日航東京．</li>
 <li>井尻 敬，X線CTを用いた形状モデリング技術とその応用"，エンターテインメントコンピューティング メタ研究会, 石川県金沢市, 2015/8/23-24. (査読なし)</li>
 <li>中沢一雄，稲田慎，谷昇子，原口亮，奈良崎大士，桑田成規，岩田倫明，五十嵐健夫，小山裕己，井尻敬，芦原貴司，神崎歩，鍵崎康治，市川肇，黒嵜健一，坂口平馬，白石公，第50回日本小児循環器学会総会・学術集会, 医学・医療分野におけるコンピュータシミュレーション技術の可能性：先天性心疾患分野の診療支援に向けたシステム開発"， シンポジウム（招待）, 2014/7/3-5, 岡山.</li>
 <li>井尻 敬, 吉澤 信, 横田 秀夫, 五十嵐 健夫. Variational Flower Modeling from Real-World Samples. 理研シンポジウム: 第２回光量子工学研究, ポスター, 75-76, 2014/11/25-26, 仙台市情報・産業プラザ.</li>
