--- a/index.html
+++ b/index.html
@@ -70,8 +70,15 @@
     <font style="font-weight:bold; line-height: 160%;">
 
         <font color="#AA0000">Recent updates</font><br>
-        2015/4/ 1 : Moved to Ritsumeikan University as a full time Lecturer <br>
+        2016/5 : Our poster was accepted to SIGGRAPH 2016.<br>
+        2016/5 : I will talk at SIGGRAPH 2016 courses "Modeling Plant Life in Computer Graphics".<br>
+        2016/5 : Our CogKnife paper was accepted to CEA 2016 <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
+        2016/5 : Our heart vizualization paper was accepted for EuroGraphics (short paper).<br>
+<!--   
+         2015/4/ 1 : Moved to Ritsumeikan University as a full time Lecturer <br>
         2015/3/31: <a href="http://www.riken.jp/brict/Ijiri/VoTracer/index.html">VoTracer was updated</a><br>
+
+    -->
     </font>
 </div>
 
@@ -142,7 +149,7 @@
     <td><img src="images/2016CogKnife.png"></td>
     <td><b>CogKnife: Food Recognition From Their Cutting Sounds</b> <br>
     T. Kojima, <b>T. Ijiri</b>, J. White,   H. Kataoka, A. Hirabayash<br>
-    <a href="2016ProjCogKnife/index.html"> project page </a> <br>
+        <a href="2016ProjCogKnife/index.html"> project page </a> <br>
     CEA2016
 </tr>
 
@@ -150,7 +157,9 @@
     <td><img src="images/2016hearttouch.png"></td>
     <td><b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b> <br>
         K. Nakashima, Y. Koyama, T. Igarashi, <b>T. Ijiri</b>, S. Inada, K. Nakazawa<br>
-        Eurographics 2016 short paper 
+        Eurographics 2016 short paper. 
+        <a href="http://www-ui.is.s.u-tokyo.ac.jp/~taka/interactive-deformation-of-hearts/"> project page </a> <br>
+        
 </tr>
 
 
@@ -314,11 +323,11 @@
 2016. Local executive committee. Pacific Graphics. <br>
 2016. International Program Committee. Pacific Graphics. <br>
 2016. Organizer. ACM CHI 2016 Symposium on Emerging Japanese HCI Research Collection. <br>
-2016. Program Committee. VC/GCAD simposium. <br>
-2015. Program Committee. VC/GCAD simposium. <br>
+2016. Program Committee. VC/GCAD Symposium. <br>
+2015. Program Committee. VC/GCAD Symposium. <br>
 2014. Program Committee. The 20th ACM Symposium on Virtual Reality Software Technology. <br>
 2014. Program Committee. Visual Computing / グラフィクスと CAD 合同シンポジウム 2014.<br>
-2013 - 2015. Committee. 情報処理学会 グラフィクスとCAD.<br>
+2013 - 2015.  Committee. 情報処理学会 グラフィクスとCAD.<br>
 2010. Program Committee. Pacific Graphics 2010.<br>
 <b>Paper review</b>SIGGRAPH 2016, TOG 2016, TOG 2015, CGF 2014, EuroGraphics2014, SIGGRAPH 2014, SIGGRAPH ASIA 2014, SIGGRAPH ASIA 2013, and so on.<br>
 </div>
