--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <font style="font-weight:bold; line-height: 160%;">
 
         <font color="#AA0000">Recent updates</font><br>
-        2016/5 : Our poster was accepted to SIGGRAPH 2016.<br>
+        2016/5 : Our poster was accepted for SIGGRAPH 2016.<br>
         2016/5 : I will talk at SIGGRAPH 2016 courses "Modeling Plant Life in Computer Graphics".<br>
-        2016/5 : Our CogKnife paper was accepted to CEA 2016 <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
+        2016/5 : Our CogKnife paper was accepted for CEA 2016 <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
         2016/5 : Our heart vizualization paper was accepted for EuroGraphics (short paper).<br>
 <!--   
          2015/4/ 1 : Moved to Ritsumeikan University as a full time Lecturer <br>
@@ -126,9 +126,6 @@
 
 
 </div><!--MainBody-->
-
-
-
 
 
 
