update pub list

--- a/publications.html
+++ b/publications.html
@@ -192,6 +192,18 @@
 
 <ol class="PubList">
 <li>
+    S. Pirk, B. Benes, O. Deussen, R. Mech, B. Chen. and T. Ijiri.:
+    <b>Modeling Plant Life in Computer Graphics</b>, 
+    SIGGRAPH 2016 courses, Anaheim, USA, 24-28 July, 2016.
+</li>
+
+<li>
+    Y. Dobashi, T. Ijiri, H. Todo, K. Iwasaki, M. Okabe, S. Nishimura.: 
+    <b>Measuring Microstructures Using Confocal Laser-Scanning Microscopy for Estimating Surface Roughness.</b> 
+    SIGGRAPH 2016 Posters, Anaheim, USA, 24-28 July, 2016.
+</li>
+
+<li>
     Kazutaka Nakashima, Yuki Koyama, Takeo Igarashi, Takashi Ijiri, Shin Inada, Kazuo Nakazawa.:
     <b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b>
     Eurographics 2016, Short Papers, 09-13 May, 2016, Lisbon, Portugal. 
