cogknife and courses

--- a/2016ProjCogKnife/index.html
+++ b/2016ProjCogKnife/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -51,7 +51,6 @@ From 20-fold cross validation, we confirmed high recognition accuracies, such as
 <form>
 <input type="button" value="audio list" onclick="window.open( './autmative_html/AUDIO_LIST.html','code1', 'width=1024,height=500' )">
 <a href="allsounds.zip">all sound data (zip)</a> 
-paper(comming soon) 
 </form>
 </Div>
 
@@ -59,12 +58,13 @@ paper(comming soon)
 <h2>Publication</h2>
         
 <p>
-Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi. 
+    [<a href="../papers/kojima_CEA2016_CogKnife.pdf">author version (pdf)</a>]
+    [IEEE Xplore (not availabl yet)] <br><br><br>
+
+    Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi. 
     CogKnife: Food Recognition From Their Cutting Sounds, 
-    Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, 2016/7/15. (accepted) 
+    Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15.
 </p>
-
-
         <br>
         <br>
         <br>
