--- a/index.html
+++ b/index.html
@@ -142,38 +142,64 @@
 <tbody>
 
 <!-- 2016 -->
+
+<tr>
+    <td><img src="images/2016PlantLife.jpg"></td>
+    <td><b>Modeling Plant Life in Computer Graphics</b>
+    Bedrich Benes, Oliver Deussen, Sören Pirk, Baoquan Chen, Radomír Měch, <b>Takashi Ijiri</b> <br>
+    ACM SIGGRAPH 2016 courses 
+    [<a href="http://goo.gl/PaJjy4">project page</a>]
+    [<a href="http://dl.acm.org/citation.cfm?id=2927332">ACM DL</a>]
+    <br>
+</tr>
+
+
 <tr>
     <td><img src="images/2016CogKnife.png"></td>
     <td><b>CogKnife: Food Recognition From Their Cutting Sounds</b> <br>
     T. Kojima, <b>T. Ijiri</b>, J. White,   H. Kataoka, A. Hirabayash<br>
-        <a href="2016ProjCogKnife/index.html"> project page </a> <br>
     CEA2016
+    [<a href="2016ProjCogKnife/index.html">project page</a>]
+     <br>
 </tr>
+
 
 <tr>
     <td><img src="images/2016hearttouch.png"></td>
     <td><b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b> <br>
         K. Nakashima, Y. Koyama, T. Igarashi, <b>T. Ijiri</b>, S. Inada, K. Nakazawa<br>
         Eurographics 2016 short paper. 
-        <a href="http://www-ui.is.s.u-tokyo.ac.jp/~taka/interactive-deformation-of-hearts/"> project page </a> <br>
+        [<a href="http://www-ui.is.s.u-tokyo.ac.jp/~taka/interactive-deformation-of-hearts/">project page</a>]
+    <br>
         
 </tr>
+
 
 
 <!-- 2015 -->
 
 <tr>
     <td><img src="images/tf2.png"></td>
-    <td><b>Flower Modeling via X-ray Computed Tomography</b><br>SIGGRAPH 2014 
-        <a href="ProjTakaflower2/index.html">project page</a> 
-        <a href="http://www.riken.jp/brict/Ijiri/flowerctlib/index.html">CT volume Libraly</a></td>
+    <td>
+        <b>Flower Modeling via X-ray Computed Tomography</b>
+        <br>
+        SIGGRAPH 2014 
+        [<a href="ProjTakaflower2/index.html">project page</a>] 
+        [<a href="http://www.riken.jp/brict/Ijiri/flowerctlib/index.html">CT volume Libraly</a>]
+        <br>
+    </td>
 </tr>
 
 <tr>
     <td><img src="images/vizkidney.png"></td>
-    <td><b>Prediction of open urinary tract in laparoscopic partial nephrectomy by virtual resection plane visualization</b><br>BMC Urology 2014<br> 
-    D. Ueno, K. Makiyama, H. Yamanaka, <b>T. Ijiri</b>, H. Yokota, and Y. Kubota.
-    <a href="http://bmcurol.biomedcentral.com/articles/10.1186/1471-2490-14-47">paper - Open access</a></td>
+    <td>
+        <b>Prediction of open urinary tract in laparoscopic partial nephrectomy by virtual resection plane visualization</b>
+        D. Ueno, K. Makiyama, H. Yamanaka, <b>T. Ijiri</b>, H. Yokota, and Y. Kubota.
+        <br>
+        BMC Urology 2014
+        [<a href="http://bmcurol.biomedcentral.com/articles/10.1186/1471-2490-14-47">paper - Open access</a>]
+        <br>
+    </td>
 </tr>
 
 
