--- a/publications.html
+++ b/publications.html
@@ -153,8 +153,10 @@
 <li>
     Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi.
     <b>CogKnife: Food Recognition From Their Cutting Sounds</b>, 
-     Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, 2016/7/15. (accepted) <br>
-    [project page]
+     Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15. (ICME 2016) <br>
+    [<a href="2016ProjCogKnife/index.html">project page</a>]
+    [<a href="./papers/kojima_CEA2016_CogKnife.pdf">author version (pdf)</a>]
+    [IEEE Xplore (not availabl yet)]
 </li>
 
 <li>
