--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <tr>
     <td><img src="images/2016PlantLife.jpg"></td>
     <td><b>Modeling Plant Life in Computer Graphics</b>
-    Bedrich Benes, Oliver Deussen, Sören Pirk, Baoquan Chen, Radomír Měch, <b>Takashi Ijiri</b> <br>
+    <br>
     ACM SIGGRAPH 2016 courses 
     [<a href="http://goo.gl/PaJjy4">project page</a>]
     [<a href="http://dl.acm.org/citation.cfm?id=2927332">ACM DL</a>]
@@ -156,21 +156,23 @@
 
 <tr>
     <td><img src="images/2016CogKnife.png"></td>
-    <td><b>CogKnife: Food Recognition From Their Cutting Sounds</b> <br>
-    T. Kojima, <b>T. Ijiri</b>, J. White,   H. Kataoka, A. Hirabayash<br>
+    <td><b>CogKnife: Food Recognition From Their Cutting Sounds</b> 
+    <br>
     CEA2016
     [<a href="2016ProjCogKnife/index.html">project page</a>]
-     <br>
+    <br>
 </tr>
 
 
 <tr>
     <td><img src="images/2016hearttouch.png"></td>
-    <td><b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b> <br>
-        K. Nakashima, Y. Koyama, T. Igarashi, <b>T. Ijiri</b>, S. Inada, K. Nakazawa<br>
+    <td>
+        <b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b> 
+        <br>
         Eurographics 2016 short paper. 
         [<a href="http://www-ui.is.s.u-tokyo.ac.jp/~taka/interactive-deformation-of-hearts/">project page</a>]
-    <br>
+        <br>
+    </td>
         
 </tr>
 
@@ -194,7 +196,6 @@
     <td><img src="images/vizkidney.png"></td>
     <td>
         <b>Prediction of open urinary tract in laparoscopic partial nephrectomy by virtual resection plane visualization</b>
-        D. Ueno, K. Makiyama, H. Yamanaka, <b>T. Ijiri</b>, H. Yokota, and Y. Kubota.
         <br>
         BMC Urology 2014
         [<a href="http://bmcurol.biomedcentral.com/articles/10.1186/1471-2490-14-47">paper - Open access</a>]
@@ -206,8 +207,12 @@
 
 <tr>
     <td><img src="images/BHRBF.png"></td>
-    <td><b>Bilateral Hermite Radial Basis Functions for Contour-based Volume Segmentation</b><br>EUROGRAPHICS 2013. 
-        <a href="ProjBHRBF/index.html">project page</a></td>
+    <td>
+        <b>Bilateral Hermite Radial Basis Functions for Contour-based Volume Segmentation</b>
+        <br>
+        EUROGRAPHICS 2013. 
+        [<a href="ProjBHRBF/index.html">project page</a>]
+    </td>
 </tr>
 
 
