--- a/study/index.html
+++ b/study/index.html
@@ -30,10 +30,14 @@
 <br>
 <h2>Visual Studioに関するメモ</h2>
 <p>
-    <a href="VisualStudio/VC2010_1.html">--VisualStudio 2010 1 CLAPACKをつかう</a><br>
-    <a href="VisualStudio/VC2010_2.html">--VisualStudio 2010 2 OpenMPでfor文を並列化</a><br>
-    <a href="VisualStudio/VC2010_3.html">--VisualStudio 2010 3 CImageでJpegとかをよむ</a><br>
-    <a href="VisualStudio/VC2010_4.html">--VisualStudio 2010 4 BundlerでImage based 3D modelingとか</a><br>
+    <a href="VisualStudio/VC2010_1.html"      >--VisualStudio  1 CLAPACKをつかう</a><br>
+    <a href="VisualStudio/VC2010_2.html"      >--VisualStudio  2 OpenMPでfor文を並列化</a><br>
+    <a href="VisualStudio/VC2010_3.html"      >--VisualStudio  3 CImageでJpegとかをよむ</a><br>
+    <a href="VisualStudio/VC2010_4.html"      >--VisualStudio  4 BundlerでImage based 3D modelingとか</a><br>
+    <a href="VisualStudio/VisualStudio_6.html">--VisualStudio  5 OpenCVやDcmtkをVisual C++用にコンパイルする</a><br>
+
+    
+
 <br>
     </p>
 <br>
