--- a/index.html
+++ b/index.html
@@ -322,6 +322,13 @@
 <tbody>
 
 <tr>
+    <td><img src="images/roipaint.png"></td>
+    <td><b>RoiPainter</b><br><a href="SoftRoiPainter/index.html">Software page</a></td>
+</tr>
+
+
+
+<tr>
     <td><img src="images/votracerthumb.png"></td>
     <td><b>Vo-Tracer</b><br><a href="http://www.riken.jp/brict/Ijiri/VoTracer/index.html">Software page</a></td>
 </tr>
