--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <tbody>
 
 <tr>
-    <td><img src="images/roipaint.png"></td>
+    <td><img src="images/RoiPainter.png"></td>
     <td><b>RoiPainter</b><br><a href="SoftRoiPainter/index.html">Software page</a></td>
 </tr>
 
