--- a/SoftRoiPainter/index.html
+++ b/SoftRoiPainter/index.html
@@ -44,6 +44,16 @@
 
 <h3>Download</h3>
 <div class="ProjAbst">
+
+    <br>
+    <a href="SimpleDcmViewer20160912.zip">SimpleDcmViewer20160912.zip</a><br>
+    Dcmスライス画像を読み込み、クリッピングと画像縮小をして、traw3D_ssというファイル形式にするソフトウエアです。
+
+    <br>
+    <a href="RoiPainter20160912.zip">RoiPainter20160912.zip</a><br>
+    ストロークトリミングでトリミングした領域を別領域にするように変更、key board shortcutに関するバグを修正、その他細かなバグを修正。
+
+
     <br>
     <a href="RoiPainter20160908.zip">RoiPainter20160908.zip</a><br>
     基本的なデータのインポート（bmp, dcm, tif, traw3D_ss）, データ出力（bmp, stl, obj）, 可視化ツール（伝達関数、局面断面）、領域分割ツール（RegionGrowing, GraphCut）、マスク生成、を実装済み．
