--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
 
 
 <li>
-    小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 黒嵜 健一, 白石 公, 中沢 一雄. 三次元心臓モデルのリアルタイム形状変形を実現するマルチタッチインタラクションシステムの技術開発. 医療情報学, vol.34, no.5, pp.221-232. 2014. (Japanese)<br>
+    小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 黒嵜 健一, 白石 公, 中沢 一雄. 三次元心臓モデルのリアルタイム形状変形を実現するマルチタッチインタラクションシステムの技術開発. 医療情報学, vol.34, no.5, pp.221-232. 2014/12/19. (Japanese)<br>
     [<a href="http://www-ui.is.s.u-tokyo.ac.jp/~koyama/project/HeartTouch/index-j.html">project page</a>]
 </li>
 
@@ -200,6 +200,14 @@
 </li>
 
 <li>
+Akira Hirabayashi, Naoki Nogami, Takashi Ijiri, Laurent Condat, 
+<b>Sequential image completion for high-speed large-pixel number sensing</b>
+EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016
+[<a href="http://www.eurasip.org/Proceedings/Eusipco/Eusipco2016/papers/1570256448.pdf">pdf</a>]
+</li>
+
+
+<li>
     Y. Dobashi, T. Ijiri, H. Todo, K. Iwasaki, M. Okabe, S. Nishimura.: 
     <b>Measuring Microstructures Using Confocal Laser-Scanning Microscopy for Estimating Surface Roughness.</b> 
     SIGGRAPH 2016 Posters, Anaheim, USA, 24-28 July, 2016.
@@ -259,7 +267,7 @@
 
 <ol class="PubList">
 <li>
-    井尻 敬、芦原 貴司、梅谷 信行、小山 裕己、五十嵐 健夫、原口 亮、横田 秀夫、中沢 一雄, <b>Shape Matching法による心臓拍動のビジュアルシミュレーション</b>，生体医工学，Vol. 53 (2015) No. 3 p. 130-137．
+    井尻 敬、芦原 貴司、梅谷 信行、小山 裕己、五十嵐 健夫、原口 亮、横田 秀夫、中沢 一雄, <b>Shape Matching法による心臓拍動のビジュアルシミュレーション</b>，生体医工学，Vol. 53 (2015) No. 3 p. 130-137．2015年10月29日. 
     [<a href="https://www.jstage.jst.go.jp/article/jsmbe/53/3/53_130/_article/-char/ja/">Online Library</a>]
 </li>
 
@@ -292,6 +300,28 @@
 
 
 
+
+
+<h1>招待講演</h1>
+<ol class="PubList">
+    <li>井尻敬,吉澤信, 横田秀夫, 五十嵐健夫 <b>X 線 CT を利用した花の三次元モデリング</b>, Visual Computing / グラフィクスと CAD合同シンポジウム 2014. 2014年6月28日(招待講演).</li>
+    <li>井尻敬, 大和田茂, 五十嵐健夫, <b>植物のモデリングにおけるプロトタイプデザインと3次元形状生成のシームレスな統合</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2006, 6月, pp. 95.</li>
+    <li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>花式図･花序:生物学の知識を利用した花のモデリングインタフェース</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2005, 6月, pp. 99-100.</li>
+</ol>
+
+
+
+<h1>基調講演・講師</h1>
+
+<ol class="PubList">
+    <li>井尻敬. <b>画像からの形状モデリング、形状に基づく画像処理</b>, CEDEC 2014, 2014年9月2日</li>
+    <li>井尻敬, <b>輪郭線を用いた領域分割ソフトウエア VoTracer</b>, 現物融合型エンジニアリング専門委員会,第50回例会議題, 2013年6月28日(招待講演).</li>
+    <li>芦原貴司，井尻敬，山口豪，高山健志，五十嵐健夫，難波経豊，島田達生，原口　亮，中沢一雄, <b>バーチャルハート：プルキンエ線維網のモデリング</b>． 第２回田原淳顕彰公開シンポジウム，2008/10/18，基調講演I，中津．</li>
+    <li>井尻敬, 横田秀夫. <b>Graph CutとFiber Meshを利用したVolume Segmentation手法</b>, VCADシステム研究会, 第23会定例研究会, 2月5日，東京.</li>
+    <li>井尻敬, <b>スケッチインタフェースによる直観的な形状モデリング手法</b>, 画像電子学会, 第33回秋期セミナー, 2009年9月17日.</li>
+    <li>井尻敬, <b>スケッチインタフェースによる植物のモデリング</b>, Esper2006, 未踏集会, 2006年5月20日,東京.</li>
+    <li>井尻敬, <b>手描きスケッチによる花のモデリング手法</b>, 可視化情報学会, 第12回ビジュアリゼーションカンファレンス, 2006年10月27日.</li>
+</ol>
 
 
 <h1>国内学会・研究会・シンポジウム（口頭発表）</h1>
@@ -350,27 +380,63 @@
 
 
 
-<h1>基調講演・講師</h1>
-
+    
+<h1>Patents</h1>
 <ol class="PubList">
-<li>井尻敬. <b>画像からの形状モデリング、形状に基づく画像処理</b>, CEDEC 2014, 2014年9月2日</li>
-<li>芦原貴司，井尻敬，山口豪，高山健志，五十嵐健夫，難波経豊，島田達生，原口　亮，中沢一雄, <b>バーチャルハート：プルキンエ線維網のモデリング</b>． 第２回田原淳顕彰公開シンポジウム，2008/10/18，基調講演I，中津．</li>
-<li>井尻敬, 横田秀夫. <b>Graph CutとFiber Meshを利用したVolume Segmentation手法</b>, VCADシステム研究会, 第23会定例研究会, 2月5日，東京.</li>
-<li>井尻敬, <b>スケッチインタフェースによる直観的な形状モデリング手法</b>, 画像電子学会, 第33回秋期セミナー, 2009年9月17日.</li>
-<li>井尻敬, <b>スケッチインタフェースによる植物のモデリング</b>, Esper2006, 未踏集会, 2006年5月20日,東京.</li>
-<li>井尻敬, <b>手描きスケッチによる花のモデリング手法</b>, 可視化情報学会, 第12回ビジュアリゼーションカンファレンス, 2006年10月27日.</li>
+    <li>
+        井尻敬，姫野龍太郎,
+        特願2015-054616.
+        "球体状の回転の測定装置、測定方法、ならびに、プログラム"．
+        平成27年3月18日．
+    </li>        
+    <li>
+        井尻敬, 吉澤信, 横田秀夫,
+        特開2014-203403
+        "境界特定装置、境界特定方法、プログラム、及び、記録媒体"
+        独立行政法人理化学研究所,
+        2014年10月27日.
+        (特願2013-081628, 2013年04月09日)
+    </li>
+    <li>
+        井尻敬, 横田秀夫,
+        特開2012-014360,
+        "領域データ編集装置、領域データ編集方法、プログラム、及び、記録媒体"
+        独立行政法人理化学研究所, 
+        2012年01月19日.
+        (特願2010-149462, 2010年06月30日)
+    </li>
+    <li>
+        井尻敬, 横田秀夫,
+        特開2012-010893, 
+        "画像表示装置、画像表示方法、曲線特定装置、曲線特定方法、プログラム、および、記録媒体", 
+        独立行政法人理化学研究所,
+        2012年01月19日. 
+        (特願2010-149497, 2010年06月30日)
+    </li>
+
+<li>
+        Inventors: Radomir Mech, Takashi Ijiri, Gavin S. P. Miller,
+        Example-based procedural synthesis of element arrangements,
+        Patent number: 8457405,
+        Type: Grant,
+        Filed: February 28, 2008,
+        Date of Patent: June 4, 2013,
+        Assignee: Adobe Systems Incorporated.
+    </li>
+
+    <li>
+        Inventors: Takashi Ijiri, Hideo Yokota, 
+        Region data editing apparatus, region data editing method, and recording medium, 
+        Patent number: 8351670, 
+        Type: Grant, 
+        Filed: February 1, 2011, 
+        Date of Patent: January 8, 2013, 
+        Assignee: Riken.
+    </li>
 </ol>
+    
+  
 
-
-
-<h1>招待講演</h1>
-<ol class="PubList">
-<li>井尻敬,吉澤信, 横田秀夫, 五十嵐健夫 <b>X 線 CT を利用した花の三次元モデリング</b>, Visual Computing / グラフィクスと CAD合同シンポジウム 2014. 2014年6月28日(招待講演).</li>
-<li>井尻敬, <b>輪郭線を用いた領域分割ソフトウエア VoTracer</b>, 現物融合型エンジニアリング専門委員会,第50回例会議題, 2013年6月28日(招待講演).</li>
-<li>井尻敬, 大和田茂, 五十嵐健夫, <b>植物のモデリングにおけるプロトタイプデザインと3次元形状生成のシームレスな統合</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2006, 6月, pp. 95.</li>
-<li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>花式図･花序:生物学の知識を利用した花のモデリングインタフェース</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2005, 6月, pp. 99-100.</li>
-</ol>
-    　　
     <br>
 </div>
     <br>
