--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 
 
 
-<h1>Refereed Journals</h1>
+<h1>Refereed Journal Papers</h1>
 
 
 <div align="right"><a href="index.html" align="right">back to top</a></div>
@@ -146,38 +146,51 @@
 
 
 
-<h1>Refereed full papers</h1>
+<h1>Refereed International Conference Papers (more than 3 pages)</h1>
 
 <ol class="PubList">
 
-<li>
-    Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi.
-    <b>CogKnife: Food Recognition From Their Cutting Sounds</b>, 
-     Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15. (ICME 2016) <br>
-    [<a href="2016ProjCogKnife/index.html">project page</a>]
-    [<a href="./papers/kojima_CEA2016_CogKnife.pdf">author version (pdf)</a>]
-    [IEEE Xplore (not availabl yet)]
-</li>
+    <li>
+        Akira Hirabayashi, Naoki Nogami, Takashi Ijiri, Laurent Condat,
+        <b>Sequential image completion for high-speed large-pixel number sensing</b>
+        EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016. (Poster)
+        [<a href="http://www.eurasip.org/Proceedings/Eusipco/Eusipco2016/papers/1570256448.pdf">pdf</a>]
+    </li>
 
-<li>
-    M. Morita, T. Tawara, M. Nishimura, S. Yoshizawa, B. Chou, I. Kuroki, T. Ijiri, Y. Tsujimura, R. Himeno, and H. Yokota, 
-    <b>"Biomedical Image Communication Platform"</b>, 
-    Proc. International Symposium on Computing and Networking, pp. 281-287, (Int. Workshop on BioImage Recognition (BIR) 2913), Matsuyama, Japan, 4-6 December 2013. (referred full paper)<br>
-    [<a href="http://dl.acm.org/citation.cfm?id=2569436.2570321">ACM Digital Library</a>]
-</li>
+    <li>
+        Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi.
+        <b>CogKnife: Food Recognition From Their Cutting Sounds</b>, 
+         Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15. (ICME 2016) (Poster) <br>
+        [<a href="2016ProjCogKnife/index.html">project page</a>]
+        [<a href="./papers/kojima_CEA2016_CogKnife.pdf">author version (pdf)</a>]
+        [IEEE Xplore (not availabl yet)]
+    </li>
 
-<li>
-    Takashi Ijiri, Mihoshi Yokoo, Saneyuki Kawabata, and Takeo Igarashi, <b>Surface-based Growth Simulation for Opening Flowers</b>. Proc. Graphics Interface 2008, pp. 227-234, Ontario Canada, 28-30 May 2008. <br>
-    <i>Michael A. J. Sweeney Award (best student paper award).</i> <br>
-    [<a href="http://dl.acm.org/citation.cfm?id=1375752">ACM Digital Library</a>]
-    [<a href="papers/ijiri_GraphicsInterface08_FlowerOpening.pdf">preprint(.pdf)</a>]
+    <li>
+        Kazutaka Nakashima, Yuki Koyama, Takeo Igarashi, Takashi Ijiri, Shin Inada, Kazuo Nakazawa.:
+        <b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b>
+        Eurographics 2016, Short Papers, 09-13 May, 2016, Lisbon, Portugal.
+    </li>
 
-    
-<li>
-    Takashi Ijiri, Shigeru Owada, and Takeo Igarashi, <b>Sketch L-System: Global Control of Tree Modeling Using Free-form Stroke</b> Proc. the 6th International Symposium of SmartGraphics, pp. 138-146, 2006. <br>
-    [<a href="http://link.springer.com/chapter/10.1007%2F11795018_13">Online Library</a>]
-    [<a href="papers/ijiriSmartGraphics2006SketchLSystem.pdf">preprint(.pdf)</a>]
-</li>
+    <li>
+        M. Morita, T. Tawara, M. Nishimura, S. Yoshizawa, B. Chou, I. Kuroki, T. Ijiri, Y. Tsujimura, R. Himeno, and H. Yokota, 
+        <b>"Biomedical Image Communication Platform"</b>, 
+        Proc. International Symposium on Computing and Networking, pp. 281-287, (Int. Workshop on BioImage Recognition (BIR) 2913), Matsuyama, Japan, 4-6 December 2013. (full paper)<br>
+        [<a href="http://dl.acm.org/citation.cfm?id=2569436.2570321">ACM Digital Library</a>]
+    </li>
+
+    <li>
+        Takashi Ijiri, Mihoshi Yokoo, Saneyuki Kawabata, and Takeo Igarashi, <b>Surface-based Growth Simulation for Opening Flowers</b>. Proc. Graphics Interface 2008, pp. 227-234, Ontario Canada, 28-30 May 2008. <br>
+        <i>Michael A. J. Sweeney Award (best student paper award).</i> <br>
+        [<a href="http://dl.acm.org/citation.cfm?id=1375752">ACM Digital Library</a>]
+        [<a href="papers/ijiri_GraphicsInterface08_FlowerOpening.pdf">preprint(.pdf)</a>]
+    </li>
+
+    <li>
+        Takashi Ijiri, Shigeru Owada, and Takeo Igarashi, <b>Sketch L-System: Global Control of Tree Modeling Using Free-form Stroke</b> Proc. the 6th International Symposium of SmartGraphics, pp. 138-146, 2006. <br>
+        [<a href="http://link.springer.com/chapter/10.1007%2F11795018_13">Online Library</a>]
+        [<a href="papers/ijiriSmartGraphics2006SketchLSystem.pdf">preprint(.pdf)</a>]
+    </li>
 </ol>
 
 
@@ -185,78 +198,57 @@
 
 
 
-
-
-
-
-
-<h1>Refereed short papers / posters / conference talks </h1>
+<h1>Other International Conference Presentation</h1>
 
 <ol class="PubList">
-<li>
-    S. Pirk, B. Benes, O. Deussen, R. Mech, B. Chen. and T. Ijiri.:
-    <b>Modeling Plant Life in Computer Graphics</b>, 
-    SIGGRAPH 2016 courses, Anaheim, USA, 24-28 July, 2016.
-</li>
+    <li>
+        S. Pirk, B. Benes, O. Deussen, R. Mech, B. Chen. and T. Ijiri.:
+        <b>Modeling Plant Life in Computer Graphics</b>, 
+        SIGGRAPH 2016 courses, Anaheim, USA, 24-28 July, 2016. (Refereed tutorial)
+    </li>
 
-<li>
-Akira Hirabayashi, Naoki Nogami, Takashi Ijiri, Laurent Condat, 
-<b>Sequential image completion for high-speed large-pixel number sensing</b>
-EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016
-[<a href="http://www.eurasip.org/Proceedings/Eusipco/Eusipco2016/papers/1570256448.pdf">pdf</a>]
-</li>
+    <li>
+        Y. Dobashi, T. Ijiri, H. Todo, K. Iwasaki, M. Okabe, S. Nishimura.: 
+        <b>Measuring Microstructures Using Confocal Laser-Scanning Microscopy for Estimating Surface Roughness.</b> 
+        SIGGRAPH 2016 Posters, Anaheim, USA, 24-28 July, 2016. (Refereed poster(1 page abstract))
+    </li>
 
+    <li>
+        Yu Sato, Keiichi Akita, Takashi Ijiri, Yuichiro Tsukada, Masaaki Ito, Hideo Yokota, Norio Saito.:
+        <b> The diversity of pelvic floor by MRI image analysis and histologic reevaluation of its anatomy</b>.  
+        Asian Association of Clinical Anatomists, Busan, Korea, November 3-4, 2012. (Poster)
+    </li>
 
-<li>
-    Y. Dobashi, T. Ijiri, H. Todo, K. Iwasaki, M. Okabe, S. Nishimura.: 
-    <b>Measuring Microstructures Using Confocal Laser-Scanning Microscopy for Estimating Surface Roughness.</b> 
-    SIGGRAPH 2016 Posters, Anaheim, USA, 24-28 July, 2016.
-</li>
+    <li>
+        Takashi Ijiri, Takashi Ashihara, Nobuyuki Umetani, Takeo Igarashi, Ryo Haraguchi, Hideo Yokota, Kazuo Nakazawa, 
+        <b>An Efficient, Robust Framework For Simulating the Beating Heart</b>, 
+        23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011.
+        (Refereed Poster(Abstract only))
+    </li>
 
-<li>
-    Kazutaka Nakashima, Yuki Koyama, Takeo Igarashi, Takashi Ijiri, Shin Inada, Kazuo Nakazawa.:
-    <b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b>
-    Eurographics 2016, Short Papers, 09-13 May, 2016, Lisbon, Portugal. 
-</li>
+    <li>
+        Yu Sato, Takashi Ijiri, Tatsushi Kobayashi, Hideo Yokota, and Masaaki Ito, <b>Semi-automatic Segmentation Tool for Anal Sphincter Muscles, </b>
+        23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011. (Poster (Abstract only))
+    </li>
 
+    <li>
+        Makoto Okabe, Kenshi Takayama, Takashi Ijiri, and Takeo Igarashi, <b>Light shower: a poor man's light stage built with an off-the-shelf umbrella and projector</b>, 
+        ACM SIGGRAPH 2007 sketches, San Diego USA, 5-9 Augusut 2007. (Refereed talk (1 page abstract)) <br>
+        [<a href="http://portal.acm.org/citation.cfm?id=1278855">ACM Digital Library</a>] 
+        [<a href="http://www.youtube.com/watch?v=VfzW0S9o5yM">youtube</a>]
+    </li>
 
-<li>
-    Yu Sato, Keiichi Akita, Takashi Ijiri, Yuichiro Tsukada, Masaaki Ito, Hideo Yokota, Norio Saito.:
-    <b> The diversity of pelvic floor by MRI image analysis and histologic reevaluation of its anatomy</b>.  
-    Asian Association of Clinical Anatomists, Busan, Korea, November 3-4, 2012. (poster)
-</li>
-
-
-<li>
-    Takashi Ijiri, Takashi Ashihara, Nobuyuki Umetani, Takeo Igarashi, Ryo Haraguchi, Hideo Yokota, Kazuo Nakazawa, 
-    <b>An Efficient, Robust Framework For Simulating the Beating Heart</b>, 
-    23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011.
-</li>
-
-
-<li>
-    Yu Sato, Takashi Ijiri, Tatsushi Kobayashi, Hideo Yokota, and Masaaki Ito, <b>Semi-automatic Segmentation Tool for Anal Sphincter Muscles, </b>
-    23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011. (poster)
-</li>
+    <li>
+        Takashi Ijiri, Kenshi Takayama, Takeo Igarashi, Takashi Ashihara, Tunetoyo Namba, Takeshi Yamaguchi, Tatsuo Shimada, Ryo Haraguchi, and Kazuo Nakazawa, 
+        <b>The use of L-system for modeling Purkinje fibers</b>, The 2nd MEI International Symposium: The Worldwide Challenge to Physiome and Systems Biology, Osaka Japan, 7-9 December 2007. 
+        (poster)
+    </li>
 
 
-<li>
-    Makoto Okabe, Kenshi Takayama, Takashi Ijiri, and Takeo Igarashi, <b>Light shower: a poor man's light stage built with an off-the-shelf umbrella and projector</b>, 
-    ACM SIGGRAPH 2007 sketches, San Diego USA, 5-9 Augusut 2007. (refereed short paper) <br>
-    [<a href="http://portal.acm.org/citation.cfm?id=1278855">ACM Digital Library</a>] 
-    [<a href="http://www.youtube.com/watch?v=VfzW0S9o5yM">youtube</a>]
-</li>
-
-<li>
-    Takashi Ijiri, Kenshi Takayama, Takeo Igarashi, Takashi Ashihara, Tunetoyo Namba, Takeshi Yamaguchi, Tatsuo Shimada, Ryo Haraguchi, and Kazuo Nakazawa, 
-    <b>The use of L-system for modeling Purkinje fibers</b>, The 2nd MEI International Symposium: The Worldwide Challenge to Physiome and Systems Biology, Osaka Japan, 7-9 December 2007. (poster)
-</li>
-
-
-<li>
-    Takashi Ijiri, Takeo Igarashi, Shin Takahashi, and Etsuya Shibayama, <b>Sketch interface for 3D modeling of flowers</b>, 
-    DVD-ROM publication at SIGGRAPH 2004 Sketches and Applications, Los Angeles USA, 8-12 August 2004. (refereed short paper)
-</li>
+    <li>
+        Takashi Ijiri, Takeo Igarashi, Shin Takahashi, and Etsuya Shibayama, <b>Sketch interface for 3D modeling of flowers</b>, 
+        DVD-ROM publication at SIGGRAPH 2004 Sketches and Applications, Los Angeles USA, 8-12 August 2004. (Refereed talk (1 page abstract))
+    </li>
 
 </ol>
 
