--- a/publications.html
+++ b/publications.html
@@ -327,13 +327,9 @@
 <li>中沢一雄, 井尻敬, 小山裕己, 中島一崇, 五十嵐健夫, 稲田慎, 原口亮, 奈良崎大士, 岩田倫明, 芦原貴司, 神崎歩, 黒嵜健一, 坂口平馬, 市川肇, 白石公, 先天性疾患心臟の形状抽出と心臓レプリカを想定したマルチタッチブラウザ開発, 第51回小児循環器学会総会・学術集会, 2015/7/16－18, ホテル日航東京．</li>
 <li>井尻 敬，X線CTを用いた形状モデリング技術とその応用"，エンターテインメントコンピューティング メタ研究会, 石川県金沢市, 2015/8/23-24. (査読なし)</li>
 <li>中沢一雄，稲田慎，谷昇子，原口亮，奈良崎大士，桑田成規，岩田倫明，五十嵐健夫，小山裕己，井尻敬，芦原貴司，神崎歩，鍵崎康治，市川肇，黒嵜健一，坂口平馬，白石公，第50回日本小児循環器学会総会・学術集会, 医学・医療分野におけるコンピュータシミュレーション技術の可能性：先天性心疾患分野の診療支援に向けたシステム開発"， シンポジウム（招待）, 2014/7/3-5, 岡山.</li>
-<li>井尻 敬, 吉澤 信, 横田 秀夫, 五十嵐 健夫. Variational Flower Modeling from Real-World Samples. 理研シンポジウム: 第２回光量子工学研究, ポスター, 75-76, 2014/11/25-26, 仙台市情報・産業プラザ.</li>
-<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 舛本 現, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫. 生物・医用画像のためのクラウドを用いた画像処理・管理システムの開発. 理研シンポジウム: 第２回光量子工学研究, ポスター, 77-78, 2014/11/25-26, 仙台市情報・産業プラザ, Sendai, Japan.</li>
 <li>中沢 一雄, 小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 谷 昇子, 岩田 倫明, 奈良崎 大士, 原口 亮, 桑田 成規, 神崎 歩, 黒嵜 健一, 白石 公. <b>タブレットＰＣによるマルチタッチインタラクションを活用した先天性心疾患のための診療支援システム</b>. 第 33 回医療情報学連合大会. 2013年11月.</li>
 <li>井尻 敬，吉澤 信，佐藤 雄，伊藤 雅昭，横田 秀夫. <b>Bilateral Domain に拡張した陰関数による画像領域分割法</b>. Visual Computing / グラフィクスと CAD 合同シンポジウム 2013. 2013年6月. (査読有り)</li>
 <li>小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 白石 公, 中沢 一雄. <b>マルチタッチによる弾性体オブジェクトとのインタラクション手法の開発</b>. Visual Computing / グラフィクスと CAD 合同シンポジウム 2013. 2013年6月.(査読有り)</li>
-<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫, &quot;<b>生物・医用画像のための処理・通信システムの開発</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 77, 平成25年10月31日-11月1日.(査読無し)</li>
-<li>辻村 有紀, 林 彰吾, 森田 正彦, 井尻 敬, 西村 正臣, 曽我 公平, 横田 秀夫, &quot;<b>CLSMによるアップコンバージョン粒子の生細胞内4次元観察</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 69-70, 201, 平成25年10月31日-11月1日.(査読無し)</li>
 <li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, <b>心臓拍動計算のための異方性弾性を考慮したShape Matching法</b>, 日本生体医工学会, 2012年5月10-5月12日. (査読無し)</li>
 <li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, <b>Shape Matching法を用いた心臓拍動の計算手法</b>, 日本機械学会バイオエンジニアリング部門　生物機械システム研究会, 2011/12/12.　(査読無し)</li>
 <li>上野大樹, 井尻敬, 井上雅弘, 田尻雄大, 大古美治, 槙山和秀, 山中弘行, 佐野太, 林成彦, 中井川昇, 小川毅彦, 上村博司, 矢尾正祐, 窪田吉信, <b>3D model 作成ツール（V tracer）の腹腔鏡下腎手術シュミレータ―における有効性の検討</b>, 日本VR医学会，第11回大会2011. (査読無し)</li>
@@ -360,7 +356,11 @@
 <h1>国内学会・研究会・シンポジウム（ポスター・デモ発表）</h1>
 <ol class="PubList">
 <li>小島嵩道，井尻敬，片岡秀公，平林晃: 食品消費モニタリングのための切断音を用いた食品認識, インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, 大分県速見郡, 2015/12/2-4．</li>
-<li>井尻敬，中村篤志，酒井道，平林晃，宮嵜武，姫野龍太郎 : 高速度カメラを用いた変化球の回転解析とその可視化, インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, 大分県速見郡, 2015/12/2-4．</li>
+<li>井尻敬，中村篤志，酒井道，平林晃，宮嵜武，姫野龍太郎 : 高速度カメラを用いた変化球の回転解析とその可視化, インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2015), デモ発表, 大分県速見郡, 2015/12/2-4．</li>
+<li>井尻 敬, 吉澤 信, 横田 秀夫, 五十嵐 健夫. Variational Flower Modeling from Real-World Samples. 理研シンポジウム: 第２回光量子工学研究, ポスター, 75-76, 2014/11/25-26, 仙台市情報・産業プラザ.</li>
+<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 舛本 現, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫. 生物・医用画像のためのクラウドを用いた画像処理・管理システムの開発. 理研シンポジウム: 第２回光量子工学研究, ポスター, 77-78, 2014/11/25-26, 仙台市情報・産業プラザ, Sendai, Japan.</li>
+<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫, &quot;<b>生物・医用画像のための処理・通信システムの開発</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 77, 2013年10月31日-11月1日.(査読無し)</li>
+<li>辻村 有紀, 林 彰吾, 森田 正彦, 井尻 敬, 西村 正臣, 曽我 公平, 横田 秀夫, &quot;<b>CLSMによるアップコンバージョン粒子の生細胞内4次元観察</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 69-70, 201, 2013年10月31日-11月1日.(査読無し)</li>
 <li>井尻敬，芦原貴司，梅谷信行，五十嵐健夫，原口亮，横田，中沢一雄： デジタルコンテンツEXPO 2012，2012/10/25-27，展示(Innovative technology)，東京．（特別賞 Human）</li>
 <li>湯田哲也，井尻敬，横田秀夫，相川直幸. <b>古地図の非剛体位置合わせ手法</b>,Visual Computing / グラフィクスと CAD 合同シンポジウム 2012, 2012/6/23-24.</li>
 <li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>構造と形状を分離した花のモデリングインタフェース</b>. 第13回インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, pp. 123-124. </li>
