--- a/publications.html
+++ b/publications.html
@@ -395,18 +395,11 @@
         "領域データ編集装置、領域データ編集方法、プログラム、及び、記録媒体"
         独立行政法人理化学研究所, 
         2012年01月19日.
-        (特願2010-149462, 2010年06月30日)
-    </li>
-    <li>
-        井尻敬, 横田秀夫,
-        特開2012-010893, 
-        "画像表示装置、画像表示方法、曲線特定装置、曲線特定方法、プログラム、および、記録媒体", 
-        独立行政法人理化学研究所,
-        2012年01月19日. 
-        (特願2010-149497, 2010年06月30日)
+        (特願2010-149462, 2010年06月30日). 
+        (特許登録済) 
     </li>
 
-<li>
+    <li>
         Inventors: Radomir Mech, Takashi Ijiri, Gavin S. P. Miller,
         Example-based procedural synthesis of element arrangements,
         Patent number: 8457405,
@@ -425,6 +418,17 @@
         Date of Patent: January 8, 2013, 
         Assignee: Riken.
     </li>
+
+
+    <li>
+        (REJECTED) 井尻敬, 横田秀夫,
+        特開2012-010893,
+        "画像表示装置、画像表示方法、曲線特定装置、曲線特定方法、プログラム、および、記録媒体",
+        独立行政法人理化学研究所,
+        2012年01月19日.
+        (特願2010-149497, 2010年06月30日)
+    </li>
+
 </ol>
     
   
