--- a/publications.html
+++ b/publications.html
@@ -153,41 +153,41 @@
     <li>
         Akira Hirabayashi, Naoki Nogami, Takashi Ijiri, Laurent Condat,
         <b>Sequential image completion for high-speed large-pixel number sensing</b>
-        EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016. (Poster)
+        EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016. (Refereed)(Poster)
         [<a href="http://www.eurasip.org/Proceedings/Eusipco/Eusipco2016/papers/1570256448.pdf">pdf</a>]
     </li>
 
     <li>
         Takamichi Kojima, Takashi Ijiri, Hidetomo Kataoka, Jeremy White, Akira Hirabayashi.
         <b>CogKnife: Food Recognition From Their Cutting Sounds</b>, 
-         Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15. (ICME 2016) (Poster) <br>
+         Proc. CEA2016: 8th Workshop on Multimediafor Cooking and Eating Activities, Seattle WA, 2016/7/15. (ICME 2016) (Refereed) (Poster) <br>
         [<a href="2016ProjCogKnife/index.html">project page</a>]
         [<a href="./papers/kojima_CEA2016_CogKnife.pdf">author version (pdf)</a>]
-        [IEEE Xplore (not availabl yet)]
+        [<a href="http://ieeexplore.ieee.org/document/7574741/?reload=true">IEEE Xplore</a>]
     </li>
 
     <li>
         Kazutaka Nakashima, Yuki Koyama, Takeo Igarashi, Takashi Ijiri, Shin Inada, Kazuo Nakazawa.:
         <b>Interactive Deformation of Structurally Complex Heart Models Constructed from Medical Images</b>
-        Eurographics 2016, Short Papers, 09-13 May, 2016, Lisbon, Portugal.
+        Eurographics 2016, Short Papers, 09-13 May, 2016, Lisbon, Portugal.(Refereed)
     </li>
 
     <li>
         M. Morita, T. Tawara, M. Nishimura, S. Yoshizawa, B. Chou, I. Kuroki, T. Ijiri, Y. Tsujimura, R. Himeno, and H. Yokota, 
         <b>"Biomedical Image Communication Platform"</b>, 
-        Proc. International Symposium on Computing and Networking, pp. 281-287, (Int. Workshop on BioImage Recognition (BIR) 2913), Matsuyama, Japan, 4-6 December 2013. (full paper)<br>
+        Proc. International Symposium on Computing and Networking, pp. 281-287, (Int. Workshop on BioImage Recognition (BIR) 2913), Matsuyama, Japan, 4-6 December 2013. (Refereed full paper)<br>
         [<a href="http://dl.acm.org/citation.cfm?id=2569436.2570321">ACM Digital Library</a>]
     </li>
 
     <li>
-        Takashi Ijiri, Mihoshi Yokoo, Saneyuki Kawabata, and Takeo Igarashi, <b>Surface-based Growth Simulation for Opening Flowers</b>. Proc. Graphics Interface 2008, pp. 227-234, Ontario Canada, 28-30 May 2008. <br>
+        Takashi Ijiri, Mihoshi Yokoo, Saneyuki Kawabata, and Takeo Igarashi, <b>Surface-based Growth Simulation for Opening Flowers</b>. Proc. Graphics Interface 2008, pp. 227-234, Ontario Canada, 28-30 May 2008. (Refereed full paper)<br>
         <i>Michael A. J. Sweeney Award (best student paper award).</i> <br>
         [<a href="http://dl.acm.org/citation.cfm?id=1375752">ACM Digital Library</a>]
         [<a href="papers/ijiri_GraphicsInterface08_FlowerOpening.pdf">preprint(.pdf)</a>]
     </li>
 
     <li>
-        Takashi Ijiri, Shigeru Owada, and Takeo Igarashi, <b>Sketch L-System: Global Control of Tree Modeling Using Free-form Stroke</b> Proc. the 6th International Symposium of SmartGraphics, pp. 138-146, 2006. <br>
+        Takashi Ijiri, Shigeru Owada, and Takeo Igarashi, <b>Sketch L-System: Global Control of Tree Modeling Using Free-form Stroke</b> Proc. the 6th International Symposium of SmartGraphics, pp. 138-146, 2006. (Refereed full paper)<br>
         [<a href="http://link.springer.com/chapter/10.1007%2F11795018_13">Online Library</a>]
         [<a href="papers/ijiriSmartGraphics2006SketchLSystem.pdf">preprint(.pdf)</a>]
     </li>
@@ -223,12 +223,12 @@
         Takashi Ijiri, Takashi Ashihara, Nobuyuki Umetani, Takeo Igarashi, Ryo Haraguchi, Hideo Yokota, Kazuo Nakazawa, 
         <b>An Efficient, Robust Framework For Simulating the Beating Heart</b>, 
         23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011.
-        (Refereed Poster(Abstract only))
+        (Abstract only)
     </li>
 
     <li>
         Yu Sato, Takashi Ijiri, Tatsushi Kobayashi, Hideo Yokota, and Masaaki Ito, <b>Semi-automatic Segmentation Tool for Anal Sphincter Muscles, </b>
-        23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011. (Poster (Abstract only))
+        23rd Conference of the Society for Medical Innovation and Technology, TelAviv Israel, 13-16 September 2011. (Poster) (Abstract only)
     </li>
 
     <li>
@@ -243,7 +243,6 @@
         <b>The use of L-system for modeling Purkinje fibers</b>, The 2nd MEI International Symposium: The Worldwide Challenge to Physiome and Systems Biology, Osaka Japan, 7-9 December 2007. 
         (poster)
     </li>
-
 
     <li>
         Takashi Ijiri, Takeo Igarashi, Shin Takahashi, and Etsuya Shibayama, <b>Sketch interface for 3D modeling of flowers</b>, 
