--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <h1>Information</h1>
 
+<p align="right">
+    <a href="index_j.html">日本語</a>
+</p>
+
     <div id="InfoLeft">
         <img src="images/TakashiIjiri.JPG" width="210"  >
     </div>
@@ -36,7 +40,7 @@
 
     <div id="InfoRight">
 
-        <b><font size="+3" style="font-size : 250%;">Takashi Ijiri (井尻 敬)</font></b>
+        <b><font size="+3" style="font-size : 250%;">Takashi Ijiri</font></b>
 
         <br>
         <br>
@@ -67,9 +71,10 @@
     
     <br><br>
 
-    <font style="font-weight:bold; line-height: 160%;">
+    <font style="font-size : 80%; line-height: 160%;">
 
         <font color="#AA0000">Recent updates</font><br>
+        2016/10: Our 3 papers were accepted for APSIPA 2016.<br>
         2016/5 : Our poster was accepted for SIGGRAPH 2016.<br>
         2016/5 : I will talk at SIGGRAPH 2016 courses "Modeling Plant Life in Computer Graphics".<br>
         2016/5 : Our CogKnife paper was accepted for CEA 2016 <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
@@ -384,6 +389,8 @@
     </tbody>
 </table>
 
+    <br>
+    <br>
 
 <table class="AwdTable">
 <tbody>
@@ -409,33 +416,6 @@
 
 
     <br>
-
-
-<h1> Fundation </h1>
-
-<table class="FundTable">
-<tbody>
-<tr> <td> <b>Head<b></td>  <td></td> </tr>
-<tr> <td>2013年度 - 現在    </td>  <td>科学研究費補助金, 若手A(30550347).</td> </tr>
-<tr> <td>2012年度 - 現在    </td>  <td>理研基礎科学特別研究員</td> </tr>
-<tr> <td>2010年度 - 2011年度</td>  <td>科学研究費補助金, 若手B(22700115).</td> </tr>
-<tr> <td>2006年度 - 2009年度</td>  <td>科学研究費補助金(特別研究員奨励費), DC1，平成18年度-平成20年度，研究代表者</td> </tr>
-<tr> <td>2005/8　 - 2006/2  </td>  <td>情報処理振興事業協会(IPA) 未踏ソフト創造事業, 「植物のモデリングシステムの開発」</td> </tr>
-<tr> <td>2004/8 　- 2005/2  </td>  <td>情報処理振興事業協会(IPA) 未踏ソフト創造事業(未踏ユース),「スケッチベースの草花のモデリングシステムの開発」</td> </tr>
-<tr> <td></td>  <td></td> </tr>
-</tbody>
-</table>
-
-<table class="FundTable">
-<tbody>
-<tr> <td> <b>Collaborator<b></td>  <td></td> </tr>
-<tr> <td>2013年度 - 2016年度</td>  <td>先天性心疾患の診療支援をめざしたリアルタイム心拍動・マルチタッチ変形シミュレータ, 25282138, 分担研究員.</td> </tr>
-<tr> <td>2010年度 - 2012年度</td>  <td>科学研究費補助金 新学術領域研究（計画研究）, 22136011, 分担研究員.</td> </tr>
-<tr> <td></td>  <td class="fund2"></td> </tr>
-</tbody>
-</table>
-
-
 
 
 </div>
