--- a/publications.html
+++ b/publications.html
@@ -305,6 +305,7 @@
 <h1>基調講演・講師</h1>
 
 <ol class="PubList">
+    <li>井尻敬, 対話的なX線CT画像の領域分割法とその花・昆虫モデリングへの応用，第2回嚥下シミュレーション研究会, 2016年11月12日, 武蔵野赤十字病院．</li>
     <li>井尻敬. <b>画像からの形状モデリング、形状に基づく画像処理</b>, CEDEC 2014, 2014年9月2日</li>
     <li>井尻敬, <b>輪郭線を用いた領域分割ソフトウエア VoTracer</b>, 現物融合型エンジニアリング専門委員会,第50回例会議題, 2013年6月28日(招待講演).</li>
     <li>芦原貴司，井尻敬，山口豪，高山健志，五十嵐健夫，難波経豊，島田達生，原口　亮，中沢一雄, <b>バーチャルハート：プルキンエ線維網のモデリング</b>． 第２回田原淳顕彰公開シンポジウム，2008/10/18，基調講演I，中津．</li>
@@ -319,7 +320,7 @@
 
 
 <ol class="PubList">
-    
+<li>Tang Chenmin, 稲室憲人, 井尻敬, 平林晃, ダブルスパースモデルとオンライン辞書学習を用いた高速MR撮像法, 電子情報通信学会 第31回 信号処理シンポジウム, 2016/11/8-10. </li>
 <li>柴田基, 稲室憲人, 井尻敬, 平林晃, "SDMMに基づくCS-MRIのための高精度再構成アルゴリズム", 信学技報, vol. 116, no. 36, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016/5/19.<a href="http://www.ieice.org/ken/paper/20160519nbIk/">link</a></li>
 <li>井尻敬, "医用画像のための対話的領域分割法とその植物モデリングへの応用", 生体医用画像研究会 第3回若手発表会, 2016/03/12</li>
 <li>上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. "先天性心疾患三次元モデル作成ツール",情報処理学会第78回全国大会，2016/3/10-12, 慶応大学矢上キャンパス．（査読なし）</li>
@@ -337,7 +338,6 @@
 <li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫,中沢一雄, <b>インタラクティブな心臓の拍動シミュレーション手法</b>, 日本医療情報学会，第30回連合大会，2010年11月. (査読無し)</li>
 <li>梅谷信行，五十嵐健夫，井尻敬，後藤陽一，鍵崎泰治，黒嵜健一，岩田倫明，谷昇子，原口亮，中沢一雄，<b>対話的な形状編集機能と血流予測機能を備えた先天性心疾患のための説明用シェーマシステムの開発</b>， 日本医療情報学会，第30回連合大会，2010年11月. (査読無し)</li>
 <li>原口　亮，芦原貴司，八尾武憲，難波経豊，藤堂貴弘，井尻　敬，高山健志，梅谷信行，五十嵐健夫，池田隆徳，中沢一雄, <b>心室較差と線維走行ねじれがスパイラルリエントリーの動態に与える影響：３次元心室壁モデルによるシミュレーション研究</b>．第25回心電情報処理ワークショップ(JSCE2009)，2009/10/17-18，口述，有馬． (査読無し)</li>
-<li>井尻 敬, 横田 秀夫, 牧野内 昭武, <b>三次元画像における抽出領域修正のためのインタフェース</b>, MIRU 2010 サテライトワークショップ，細胞内画像処理 2010年7月.(査読無し)</li>
 <li>井尻 敬, 高山 健志, 横田秀夫, 五十嵐 健夫,<b>柔軟な物体の能動的な動作の表現手法</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2009.<i>VC賞受賞</i>. (査読有り)</li>
 <li>井尻 敬, 高山 建志, 五十嵐 健夫, <b>ゲームのための柔軟なキャラクタの動作デザイン</b>, 映像情報メディア学会, デジタルコンテンツシンポジウム 2009.<i>船井賞受賞</i>.　(査読無し)</li>
 <li>井尻 敬, 横尾美星, 河鰭実之, 五十嵐 健夫, <b>開花アニメーションのための花弁の成長シミュレーション</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2008.<i>優秀研究発表賞受賞</i>.　(査読有り)</li>
@@ -345,7 +345,6 @@
      <i>(ベストプレゼンテーション賞受賞(発表者は岡部誠))</i>(査読無し) <A href="papers/okabe_ec2007_LightShower.pdf">[preprint(.pdf)]</A></li>
 <li>中沢一雄, 原口亮, 大森健太, 八木隆宏, 吉冨紘平, 稲田紘, 高山健志,井尻敬, 五十嵐健夫, <b>電子カルテの有効利用をめざした先天性心疾患のためのベクトルシェーマ・システム</b>, 医療情報学会 第27回連合大会(2007), 1-l-3-1.　(査読無し)</li>
 <li>原口亮, 五十嵐健夫, 井尻敬, 高山健志, 八尾武憲, 芦原貴司, 難波経豊, 藤堂貴弘, 東将浩, 中沢一雄, <b>患者個別の仮想心臓モデル構築効率化のための技術開発</b>, 医療情報学会 第27回連合大会(2007), 3-E-2-4.　(査読無し)</li>
-<li>井尻 敬, 大和田 茂, 五十嵐 健夫, 高橋 伸, 柴山 悦哉, <b>手描きストロークによる草花のモデリング</b>, ビジュアル情報処理研究合宿2004, p11-12. 　(査読無し)</li>
 </ol>
 
 
