--- a/publications.html
+++ b/publications.html
@@ -258,23 +258,27 @@
 
 <ol class="PubList">
 <li>
-    井尻 敬、芦原 貴司、梅谷 信行、小山 裕己、五十嵐 健夫、原口 亮、横田 秀夫、中沢 一雄, <b>Shape Matching法による心臓拍動のビジュアルシミュレーション</b>，生体医工学，Vol. 53 (2015) No. 3 p. 130-137．2015年10月29日. 
+    井尻 敬、芦原 貴司、梅谷 信行、小山 裕己、五十嵐 健夫、原口 亮、横田 秀夫、中沢 一雄, 
+    <b>Shape Matching法による心臓拍動のビジュアルシミュレーション</b>，
+    生体医工学，Vol. 53 (2015) No. 3 p. 130-137．2015年10月29日. 
     [<a href="https://www.jstage.jst.go.jp/article/jsmbe/53/3/53_130/_article/-char/ja/">Online Library</a>]
 </li>
 
 
 <li>
-    金森 由博、井尻 敬、堀田 一弘、五十嵐 悠紀、德吉 雄介、安田 廉、山本 醍田、向井 智彦、梅谷 信行: Computer Graphics Gems JP 2013/2014. コンピュータグラフィックス技術の最前線. ボーンデジタル,  2013年12月26日発売. 
+    金森 由博、井尻 敬、堀田 一弘、五十嵐 悠紀、德吉 雄介、安田 廉、山本 醍田、向井 智彦、梅谷 信行: Computer Graphics Gems JP 2013/2014. 
+    コンピュータグラフィックス技術の最前線. ボーンデジタル, 2013年12月26日発売. 
 </li>
 
 <li>
-    井尻 敬, インタラクティブな三次元画像領域分割, 精密工学会誌, Vol.79(6), pp. 493-496, 2013/12/5.
+    井尻 敬, インタラクティブな三次元画像領域分割, 精密工学会誌, Vol.79(6), pp. 493-496, 2013年12月5日.
     [<a href="https://www.jstage.jst.go.jp/article/jjspe/79/6/79_493/_article/-char/ja/">Online Library</a>]
 </li>
 
 <li>
     三谷 純、五十嵐 悠紀、岩崎 慶、徳吉 雄介、吉澤 信、高山 健志、岡部 誠、向井 智彦、山本 醍田、辛 孝宗、井尻 敬、梅谷 信行、安東 遼一、原田 隆宏,
-    <b>Computer Graphics Gems JP 2012 コンピュータグラフィックス技術の最前線</b>, 株式会社 ボーンデジタル，2012年8月27日発売
+    <b>Computer Graphics Gems JP 2012 コンピュータグラフィックス技術の最前線</b>, 
+    株式会社 ボーンデジタル，2012年8月27日発売
 </li>
 
 <li>
@@ -293,26 +297,26 @@
 
 
 
-<h1>招待講演</h1>
+<h1>国内学会・研究会（招待講演）</h1>
 <ol class="PubList">
     <li>井尻敬,吉澤信, 横田秀夫, 五十嵐健夫 <b>X 線 CT を利用した花の三次元モデリング</b>, Visual Computing / グラフィクスと CAD合同シンポジウム 2014. 2014年6月28日(招待講演).</li>
-    <li>井尻敬, 大和田茂, 五十嵐健夫, <b>植物のモデリングにおけるプロトタイプデザインと3次元形状生成のシームレスな統合</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2006, 6月, pp. 95.</li>
-    <li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>花式図･花序:生物学の知識を利用した花のモデリングインタフェース</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2005, 6月, pp. 99-100.</li>
+    <li>井尻敬, 大和田茂, 五十嵐健夫, <b>植物のモデリングにおけるプロトタイプデザインと3次元形状生成のシームレスな統合</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2006, 6月22-23日, pp. 95.</li>
+    <li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>花式図･花序:生物学の知識を利用した花のモデリングインタフェース</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2005, 6月16－17日, pp. 99-100.</li>
 </ol>
 
 
 
-<h1>基調講演・講師</h1>
+<h1>国内学会・研究会（講師・基調講演）</h1>
 
 <ol class="PubList">
-    <li>井尻敬, 対話的なX線CT画像の領域分割法とその花・昆虫モデリングへの応用，第2回嚥下シミュレーション研究会, 2016年11月12日, 武蔵野赤十字病院．</li>
-    <li>井尻敬. <b>画像からの形状モデリング、形状に基づく画像処理</b>, CEDEC 2014, 2014年9月2日</li>
-    <li>井尻敬, <b>輪郭線を用いた領域分割ソフトウエア VoTracer</b>, 現物融合型エンジニアリング専門委員会,第50回例会議題, 2013年6月28日(招待講演).</li>
+    <li>井尻敬, 対話的なX線CT画像の領域分割法とその花・昆虫モデリングへの応用，第2回嚥下シミュレーション研究会, 武蔵野赤十字病院，2016年11月12日．</li>
+    <li>井尻敬. <b>画像からの形状モデリング，形状に基づく画像処理</b>, CEDEC 2014, パシフィコ横浜，2014年9月2日．</li>
+    <li>井尻敬, <b>輪郭線を用いた領域分割ソフトウエア VoTracer</b>, 現物融合型エンジニアリング専門委員会,第50回例会, 2013年6月28日.</li>
     <li>芦原貴司，井尻敬，山口豪，高山健志，五十嵐健夫，難波経豊，島田達生，原口　亮，中沢一雄, <b>バーチャルハート：プルキンエ線維網のモデリング</b>． 第２回田原淳顕彰公開シンポジウム，2008/10/18，基調講演I，中津．</li>
-    <li>井尻敬, 横田秀夫. <b>Graph CutとFiber Meshを利用したVolume Segmentation手法</b>, VCADシステム研究会, 第23会定例研究会, 2月5日，東京.</li>
-    <li>井尻敬, <b>スケッチインタフェースによる直観的な形状モデリング手法</b>, 画像電子学会, 第33回秋期セミナー, 2009年9月17日.</li>
-    <li>井尻敬, <b>スケッチインタフェースによる植物のモデリング</b>, Esper2006, 未踏集会, 2006年5月20日,東京.</li>
-    <li>井尻敬, <b>手描きスケッチによる花のモデリング手法</b>, 可視化情報学会, 第12回ビジュアリゼーションカンファレンス, 2006年10月27日.</li>
+    <li>井尻敬, 横田秀夫. <b>Graph CutとFiber Meshを利用したVolume Segmentation手法</b>, VCADシステム研究会, 第23回定例研究会, 東京，2010年2月5日.</li>
+    <li>井尻敬, <b>スケッチインタフェースによる直観的な形状モデリング手法</b>, 画像電子学会, 第33回秋期セミナー, 東京農工大学，2009年9月17日.</li>
+    <li>井尻敬, <b>スケッチインタフェースによる植物のモデリング</b>, Esper2006，未踏集会，東京，2006年5月20日.</li>
+    <li>井尻敬, <b>手描きスケッチによる花のモデリング手法</b>, 可視化情報学会, 第12回ビジュアリゼーションカンファレンス, 東京，2006年10月27日.</li>
 </ol>
 
 
@@ -320,31 +324,116 @@
 
 
 <ol class="PubList">
-<li>Tang Chenmin, 稲室憲人, 井尻敬, 平林晃, ダブルスパースモデルとオンライン辞書学習を用いた高速MR撮像法, 電子情報通信学会 第31回 信号処理シンポジウム, 2016/11/8-10. </li>
-<li>柴田基, 稲室憲人, 井尻敬, 平林晃, "SDMMに基づくCS-MRIのための高精度再構成アルゴリズム", 信学技報, vol. 116, no. 36, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016/5/19.<a href="http://www.ieice.org/ken/paper/20160519nbIk/">link</a></li>
-<li>井尻敬, "医用画像のための対話的領域分割法とその植物モデリングへの応用", 生体医用画像研究会 第3回若手発表会, 2016/03/12</li>
-<li>上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. "先天性心疾患三次元モデル作成ツール",情報処理学会第78回全国大会，2016/3/10-12, 慶応大学矢上キャンパス．（査読なし）</li>
-<li>中沢一雄, 井尻敬, 小山裕己, 中島一崇, 五十嵐健夫, 稲田慎, 原口亮, 奈良崎大士, 岩田倫明, 芦原貴司, 神崎歩, 黒嵜健一, 坂口平馬, 市川肇, 白石公, 先天性疾患心臟の形状抽出と心臓レプリカを想定したマルチタッチブラウザ開発, 第51回小児循環器学会総会・学術集会, 2015/7/16－18, ホテル日航東京．</li>
-<li>井尻 敬，X線CTを用いた形状モデリング技術とその応用"，エンターテインメントコンピューティング メタ研究会, 石川県金沢市, 2015/8/23-24. (査読なし)</li>
-<li>中沢一雄，稲田慎，谷昇子，原口亮，奈良崎大士，桑田成規，岩田倫明，五十嵐健夫，小山裕己，井尻敬，芦原貴司，神崎歩，鍵崎康治，市川肇，黒嵜健一，坂口平馬，白石公，第50回日本小児循環器学会総会・学術集会, 医学・医療分野におけるコンピュータシミュレーション技術の可能性：先天性心疾患分野の診療支援に向けたシステム開発"， シンポジウム（招待）, 2014/7/3-5, 岡山.</li>
-<li>中沢 一雄, 小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 谷 昇子, 岩田 倫明, 奈良崎 大士, 原口 亮, 桑田 成規, 神崎 歩, 黒嵜 健一, 白石 公. <b>タブレットＰＣによるマルチタッチインタラクションを活用した先天性心疾患のための診療支援システム</b>. 第 33 回医療情報学連合大会. 2013年11月.</li>
-<li>井尻 敬，吉澤 信，佐藤 雄，伊藤 雅昭，横田 秀夫. <b>Bilateral Domain に拡張した陰関数による画像領域分割法</b>. Visual Computing / グラフィクスと CAD 合同シンポジウム 2013. 2013年6月. (査読有り)</li>
-<li>小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 白石 公, 中沢 一雄. <b>マルチタッチによる弾性体オブジェクトとのインタラクション手法の開発</b>. Visual Computing / グラフィクスと CAD 合同シンポジウム 2013. 2013年6月.(査読有り)</li>
-<li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, <b>心臓拍動計算のための異方性弾性を考慮したShape Matching法</b>, 日本生体医工学会, 2012年5月10-5月12日. (査読無し)</li>
-<li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, <b>Shape Matching法を用いた心臓拍動の計算手法</b>, 日本機械学会バイオエンジニアリング部門　生物機械システム研究会, 2011/12/12.　(査読無し)</li>
-<li>上野大樹, 井尻敬, 井上雅弘, 田尻雄大, 大古美治, 槙山和秀, 山中弘行, 佐野太, 林成彦, 中井川昇, 小川毅彦, 上村博司, 矢尾正祐, 窪田吉信, <b>3D model 作成ツール（V tracer）の腹腔鏡下腎手術シュミレータ―における有効性の検討</b>, 日本VR医学会，第11回大会2011. (査読無し)</li>
-<li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, <b>幾何制約に基づく運動計算手法を用いた実時間心臓拍動シミュレーション</b>, 第50回日本生体医工学会大会，2011年4月29-5月1日. (査読無し)</li>
-<li>井尻敬, 横田秀夫, <b>輪郭編集による三次元抽出領域の修正インタフェース</b>, 情報処理学会，第142回グラフィクスとCAD研究発表会，2011年2月8-9日. (査読無し)</li>
-<li>井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫,中沢一雄, <b>インタラクティブな心臓の拍動シミュレーション手法</b>, 日本医療情報学会，第30回連合大会，2010年11月. (査読無し)</li>
-<li>梅谷信行，五十嵐健夫，井尻敬，後藤陽一，鍵崎泰治，黒嵜健一，岩田倫明，谷昇子，原口亮，中沢一雄，<b>対話的な形状編集機能と血流予測機能を備えた先天性心疾患のための説明用シェーマシステムの開発</b>， 日本医療情報学会，第30回連合大会，2010年11月. (査読無し)</li>
-<li>原口　亮，芦原貴司，八尾武憲，難波経豊，藤堂貴弘，井尻　敬，高山健志，梅谷信行，五十嵐健夫，池田隆徳，中沢一雄, <b>心室較差と線維走行ねじれがスパイラルリエントリーの動態に与える影響：３次元心室壁モデルによるシミュレーション研究</b>．第25回心電情報処理ワークショップ(JSCE2009)，2009/10/17-18，口述，有馬． (査読無し)</li>
-<li>井尻 敬, 高山 健志, 横田秀夫, 五十嵐 健夫,<b>柔軟な物体の能動的な動作の表現手法</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2009.<i>VC賞受賞</i>. (査読有り)</li>
-<li>井尻 敬, 高山 建志, 五十嵐 健夫, <b>ゲームのための柔軟なキャラクタの動作デザイン</b>, 映像情報メディア学会, デジタルコンテンツシンポジウム 2009.<i>船井賞受賞</i>.　(査読無し)</li>
-<li>井尻 敬, 横尾美星, 河鰭実之, 五十嵐 健夫, <b>開花アニメーションのための花弁の成長シミュレーション</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2008.<i>優秀研究発表賞受賞</i>.　(査読有り)</li>
-<li>岡部 誠, 高山 健志, 井尻 敬, 五十嵐 健夫,<b>ライトシャワー:傘とプロジェクタで作る安価な照明装置</b>,エンタテインメントコンピューティング2007.
-     <i>(ベストプレゼンテーション賞受賞(発表者は岡部誠))</i>(査読無し) <A href="papers/okabe_ec2007_LightShower.pdf">[preprint(.pdf)]</A></li>
-<li>中沢一雄, 原口亮, 大森健太, 八木隆宏, 吉冨紘平, 稲田紘, 高山健志,井尻敬, 五十嵐健夫, <b>電子カルテの有効利用をめざした先天性心疾患のためのベクトルシェーマ・システム</b>, 医療情報学会 第27回連合大会(2007), 1-l-3-1.　(査読無し)</li>
-<li>原口亮, 五十嵐健夫, 井尻敬, 高山健志, 八尾武憲, 芦原貴司, 難波経豊, 藤堂貴弘, 東将浩, 中沢一雄, <b>患者個別の仮想心臓モデル構築効率化のための技術開発</b>, 医療情報学会 第27回連合大会(2007), 3-E-2-4.　(査読無し)</li>
+<li>
+    Tang Chenmin, 稲室憲人, 井尻敬, 平林晃, <b>ダブルスパースモデルとオンライン辞書学習を用いた高速MR撮像法</b>, 
+    電子情報通信学会 第31回 信号処理シンポジウム, 2016年11月8-10日. 
+</li>
+<li>
+    柴田基, 稲室憲人, 井尻敬, 平林晃, <b>SDMMに基づくCS-MRIのための高精度再構成アルゴリズム</b>, 
+    信学技報, vol. 116, no. 36, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016年5月19日.
+    <a href="http://www.ieice.org/ken/paper/20160519nbIk/">link</a>
+</li>
+<li>
+    井尻敬, <b>医用画像のための対話的領域分割法とその植物モデリングへの応用</b>, 
+    生体医用画像研究会 第3回若手発表会, 2016年3月12日．
+</li>
+<li>
+    上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. <b>先天性心疾患三次元モデル作成ツール<b>,
+    情報処理学会第78回全国大会，慶応大学矢上キャンパス，2016年3月10-12日．
+</li>
+<li>
+    中沢一雄, 井尻敬, 小山裕己, 中島一崇, 五十嵐健夫, 稲田慎, 原口亮, 奈良崎大士, 岩田倫明, 芦原貴司, 神崎歩, 黒嵜健一, 坂口平馬, 市川肇, 白石公, 
+    <b>先天性疾患心臟の形状抽出と心臓レプリカを想定したマルチタッチブラウザ開発</b>, 
+    第51回小児循環器学会総会・学術集会, ホテル日航東京，2015年7月16－18日．
+</li>
+<li>
+    井尻 敬，<b>X線CTを用いた形状モデリング技術とその応用</b>，
+    エンターテインメントコンピューティング メタ研究会, 石川県金沢市，2015年8月23-24日. 
+</li>
+<li>
+    中沢一雄，稲田慎，谷昇子，原口亮，奈良崎大士，桑田成規，岩田倫明，五十嵐健夫，小山裕己，井尻敬，芦原貴司，神崎歩，鍵崎康治，市川肇，黒嵜健一，坂口平馬，白石公，
+    <b>第50回日本小児循環器学会総会・学術集会, 医学・医療分野におけるコンピュータシミュレーション技術の可能性：先天性心疾患分野の診療支援に向けたシステム開発</b>，
+    シンポジウム（招待）, 岡山，2014年7月3-5日.
+</li>
+<li>
+    中沢 一雄, 小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 谷 昇子, 岩田 倫明, 奈良崎 大士, 原口 亮, 桑田 成規, 神崎 歩, 黒嵜 健一, 白石 公. 
+    <b>タブレットＰＣによるマルチタッチインタラクションを活用した先天性心疾患のための診療支援システム</b>. 
+    第 33 回医療情報学連合大会, 神戸，2013年11月21-23日.
+</li>
+<li>
+    井尻 敬，吉澤 信，佐藤 雄，伊藤 雅昭，横田 秀夫. <b>Bilateral Domain に拡張した陰関数による画像領域分割法</b>. 
+    Visual Computing / グラフィクスと CAD 合同シンポジウム 2013，青森市，2013年6月22-23日. (査読有り)
+</li>
+<li>
+    小山 裕己, 五十嵐 健夫, 井尻 敬, 稲田 慎, 白石 公, 中沢 一雄. 
+    <b>マルチタッチによる弾性体オブジェクトとのインタラクション手法の開発</b>. 
+    Visual Computing / グラフィクスと CAD 合同シンポジウム 2013，青森市，2013年6月22-23日.(査読有り)
+</li>
+<li>
+    井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, 
+    <b>心臓拍動計算のための異方性弾性を考慮したShape Matching法</b>, 
+    日本生体医工学会, 2012年5月10-5月12日. 
+</li>
+<li>
+    井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, 
+    <b>Shape Matching法を用いた心臓拍動の計算手法</b>, 
+    日本機械学会バイオエンジニアリング部門　生物機械システム研究会, 大阪大学，2011年12月12日.
+</li>
+<li>
+    上野大樹, 井尻敬, 井上雅弘, 田尻雄大, 大古美治, 槙山和秀, 山中弘行, 佐野太, 林成彦, 中井川昇, 小川毅彦, 上村博司, 矢尾正祐, 窪田吉信, 
+    <b>3D model 作成ツール（V tracer）の腹腔鏡下腎手術シュミレータ―における有効性の検討</b>, 
+    日本VR医学会，第11回大会，奈良先端科学技術大学院大学，2011年8月27日. 
+</li>
+<li>
+    井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫, 中沢一雄, 
+    <b>幾何制約に基づく運動計算手法を用いた実時間心臓拍動シミュレーション</b>, 
+    第50回日本生体医工学会大会，東京電機大学，2011年4月29-5月1日. 
+</li>
+<li>
+    井尻敬, 横田秀夫, 
+    <b>輪郭編集による三次元抽出領域の修正インタフェース</b>, 
+    情報処理学会，第142回グラフィクスとCAD研究発表会，慶應義塾大学，2011年2月8-9日. 
+</li>
+<li>
+    井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫,中沢一雄, 
+    <b>インタラクティブな心臓の拍動シミュレーション手法</b>, 
+    日本医療情報学会，第30回連合大会，浜松市，2010年11月19-21日.
+</li>
+<li>
+    梅谷信行，五十嵐健夫，井尻敬，後藤陽一，鍵崎泰治，黒嵜健一，岩田倫明，谷昇子，原口亮，中沢一雄，
+    <b>対話的な形状編集機能と血流予測機能を備えた先天性心疾患のための説明用シェーマシステムの開発</b>，
+    日本医療情報学会，第30回連合大会，2010年11月19-21日.
+</li>
+<li>
+    原口　亮，芦原貴司，八尾武憲，難波経豊，藤堂貴弘，井尻　敬，高山健志，梅谷信行，五十嵐健夫，池田隆徳，中沢一雄, 
+    <b>心室較差と線維走行ねじれがスパイラルリエントリーの動態に与える影響：３次元心室壁モデルによるシミュレーション研究</b>．
+    第25回心電情報処理ワークショップ(JSCE2009)，神戸市，2009年10月17-18日． 
+</li>
+<li>
+    井尻 敬, 高山 健志, 横田秀夫, 五十嵐 健夫,<b>柔軟な物体の能動的な動作の表現手法</b>, 
+    画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム，旭川市，2009年6月25-26日. <i>VC賞受賞</i>. (査読有り)</li>
+<li>
+    井尻 敬, 高山 建志, 五十嵐 健夫, <b>ゲームのための柔軟なキャラクタの動作デザイン</b>, 
+    映像情報メディア学会, デジタルコンテンツシンポジウム，千葉市，2009年6月10日.
+    <i>船井賞受賞</i>.　(査読無し)</li>
+<li>
+    井尻 敬, 横尾美星, 河鰭実之, 五十嵐 健夫, <b>開花アニメーションのための花弁の成長シミュレーション</b>, 
+    画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2008，国士舘大学，2008年6月21日.<i>優秀研究発表賞受賞</i>.(査読有り)
+</li>
+<li>
+    岡部 誠, 高山 健志, 井尻 敬, 五十嵐 健夫,<b>ライトシャワー:傘とプロジェクタで作る安価な照明装置</b>,
+    エンタテインメントコンピューティング2007.
+     <i>(ベストプレゼンテーション賞受賞(発表者は岡部誠))</i>(査読無し) 
+    <A href="papers/okabe_ec2007_LightShower.pdf">[preprint(.pdf)]</A>
+</li>
+<li>
+    中沢一雄, 原口亮, 大森健太, 八木隆宏, 吉冨紘平, 稲田紘, 高山健志,井尻敬, 五十嵐健夫, 
+    <b>電子カルテの有効利用をめざした先天性心疾患のためのベクトルシェーマ・システム</b>, 
+    医療情報学会 第27回医療情報学連合大会, 1-l-3-1，2007年11月23－25日.</li>
+<li>
+    原口亮, 五十嵐健夫, 井尻敬, 高山健志, 八尾武憲, 芦原貴司, 難波経豊, 藤堂貴弘, 東将浩, 中沢一雄, 
+    <b>患者個別の仮想心臓モデル構築効率化のための技術開発</b>, 
+    医療情報学会 第27回医療情報学連合大会, 3-E-2-4，2007年11月23-25日.　</li>
 </ol>
 
 
@@ -353,18 +442,56 @@
 
 <h1>国内学会・研究会・シンポジウム（ポスター・デモ発表）</h1>
 <ol class="PubList">
-<li>小島嵩道，井尻敬，片岡秀公，平林晃: 食品消費モニタリングのための切断音を用いた食品認識, インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, 大分県速見郡, 2015/12/2-4．</li>
-<li>井尻敬，中村篤志，酒井道，平林晃，宮嵜武，姫野龍太郎 : 高速度カメラを用いた変化球の回転解析とその可視化, インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2015), デモ発表, 大分県速見郡, 2015/12/2-4．</li>
-<li>井尻 敬, 吉澤 信, 横田 秀夫, 五十嵐 健夫. Variational Flower Modeling from Real-World Samples. 理研シンポジウム: 第２回光量子工学研究, ポスター, 75-76, 2014/11/25-26, 仙台市情報・産業プラザ.</li>
-<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 舛本 現, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫. 生物・医用画像のためのクラウドを用いた画像処理・管理システムの開発. 理研シンポジウム: 第２回光量子工学研究, ポスター, 77-78, 2014/11/25-26, 仙台市情報・産業プラザ, Sendai, Japan.</li>
-<li>森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫, &quot;<b>生物・医用画像のための処理・通信システムの開発</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 77, 2013年10月31日-11月1日.(査読無し)</li>
-<li>辻村 有紀, 林 彰吾, 森田 正彦, 井尻 敬, 西村 正臣, 曽我 公平, 横田 秀夫, &quot;<b>CLSMによるアップコンバージョン粒子の生細胞内4次元観察</b>&quot;, 理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 69-70, 201, 2013年10月31日-11月1日.(査読無し)</li>
-<li>井尻敬，芦原貴司，梅谷信行，五十嵐健夫，原口亮，横田，中沢一雄： デジタルコンテンツEXPO 2012，2012/10/25-27，展示(Innovative technology)，東京．（特別賞 Human）</li>
-<li>湯田哲也，井尻敬，横田秀夫，相川直幸. <b>古地図の非剛体位置合わせ手法</b>,Visual Computing / グラフィクスと CAD 合同シンポジウム 2012, 2012/6/23-24.</li>
-<li>井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>構造と形状を分離した花のモデリングインタフェース</b>. 第13回インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, pp. 123-124. </li>
-<li>井尻 敬, 五十嵐 健夫, <b>Sketch L-System ストロークによるフラクタル形状生成インタフェース</b>. 第13回インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, pp. 149-150.</li>
-<li>井尻 敬, 五十嵐 健夫, 高橋 伸，柴山 悦哉, <b>スケッチベースの草花のモデリング</b>, 画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2004, ポスター発表, pp. 213-218. <i>VC賞poster部門受賞</i>.</li>
-<li>井尻 敬, 高橋 伸, 柴山 悦哉, <b>スケッチベースの植物のモデリング</b>, 情報処理学会シンポジウム 「インタラクション 2004,　ポスター発表, pp. 243-244, 2004年3月.　</li>
+<li>
+    小島嵩道，井尻敬，片岡秀公，平林晃. <b>食品消費モニタリングのための切断音を用いた食品認識</b>, 
+    インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, 大分県速見郡, 2015年12月2-4日．
+</li>
+<li>
+    井尻敬，中村篤志，酒井道，平林晃，宮嵜武，姫野龍太郎．<b>高速度カメラを用いた変化球の回転解析とその可視化</b>, 
+    インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2015), デモ発表, 大分県速見郡, 2015年12月2-4日．
+</li>
+<li>
+    井尻 敬, 吉澤 信, 横田 秀夫, 五十嵐 健夫. <b>Variational Flower Modeling from Real-World Samples.</b> 
+    理研シンポジウム: 第２回光量子工学研究, ポスター, 75-76, 仙台市情報・産業プラザ, 2014年11月25-26日.
+</li>
+<li>
+    森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 舛本 現, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫. 
+    <b>生物・医用画像のためのクラウドを用いた画像処理・管理システムの開発</b>. 
+    理研シンポジウム: 第２回光量子工学研究, ポスター, 77-78, 仙台市情報・産業プラザ, 2014年11月25-26日.
+</li>
+<li>
+    森田 正彦, 俵 丈展, 西村 将臣, 吉澤 信, 趙 武魁, 黒木 一平, 井尻 敬, 辻村 有紀, 姫野 龍太郎, 横田 秀夫, 
+    <b>生物・医用画像のための処理・通信システムの開発</b>, 
+    理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 77, 2013年10月31日-11月1日.
+</li>
+<li>
+    辻村 有紀, 林 彰吾, 森田 正彦, 井尻 敬, 西村 正臣, 曽我 公平, 横田 秀夫, <b>CLSMによるアップコンバージョン粒子の生細胞内4次元観察</b>,
+    理研シンポジウム：第１回「光量子工学研究」, 講演要旨集, poster, 理化学研究所, 和光, pp. 69-70, 201, 2013年10月31日-11月1日.
+</li>
+<li>
+    井尻敬，芦原貴司，梅谷信行，五十嵐健夫，原口亮，横田，中沢一雄．
+    デジタルコンテンツEXPO 2012，展示(Innovative technology)，東京都，2012年10月25-27日．（特別賞 Human）
+</li>
+<li>
+    湯田哲也，井尻敬，横田秀夫，相川直幸. <b>古地図の非剛体位置合わせ手法</b>,
+    Visual Computing / グラフィクスと CAD 合同シンポジウム 2012, ポスター，2012年6月23-24日.
+</li>
+<li>
+    井尻 敬, 大和田 茂, 岡部 誠, 五十嵐 健夫, <b>構造と形状を分離した花のモデリングインタフェース</b>. 
+    第13回インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, pp. 123-124，香川県小豆島，2005年12月7-9日. 
+</li>
+<li>
+    井尻 敬, 五十嵐 健夫, <b>Sketch L-System ストロークによるフラクタル形状生成インタフェース</b>. 
+    第13回インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, pp. 149-150，香川県小豆島，2005年12月7-9日. 
+</li>
+<li>
+    井尻 敬, 五十嵐 健夫, 高橋 伸，柴山 悦哉, <b>スケッチベースの草花のモデリング</b>, 
+    画像電子学会, Visual Computing/グラフィクスとCAD 合同シンポジウム2004, ポスター発表, pp. 213-218，2004年6月3-4日. <i>VC賞poster部門受賞</i>.
+</li>
+<li>
+    井尻 敬, 高橋 伸, 柴山 悦哉, <b>スケッチベースの植物のモデリング</b>, 
+    情報処理学会シンポジウム インタラクション 2004,　ポスター発表, pp. 243-244, 2004年3月4-5日.　
+</li>
 </ol>
 
 
