--- a/publications.html
+++ b/publications.html
@@ -330,7 +330,7 @@
 </li>
 <li>
     柴田基, 稲室憲人, 井尻敬, 平林晃, <b>SDMMに基づくCS-MRIのための高精度再構成アルゴリズム</b>, 
-    信学技報, vol. 116, no. 36, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016年5月19日.
+    信学技報, vol. 116, no. 39, SIP2016-12, pp. 59-64, 愛知県名古屋市(名古屋大学) 2016年5月19日.
     <a href="http://www.ieice.org/ken/paper/20160519nbIk/">link</a>
 </li>
 <li>
@@ -397,12 +397,12 @@
 <li>
     井尻敬, 芦原貴司, 梅谷信行, 原口亮, 横田秀夫, 五十嵐健夫,中沢一雄, 
     <b>インタラクティブな心臓の拍動シミュレーション手法</b>, 
-    日本医療情報学会，第30回連合大会，浜松市，2010年11月19-21日.
+    日本医療情報学会，第30回 医療情報学連合大会，浜松市，2010年11月19-21日.
 </li>
 <li>
     梅谷信行，五十嵐健夫，井尻敬，後藤陽一，鍵崎泰治，黒嵜健一，岩田倫明，谷昇子，原口亮，中沢一雄，
     <b>対話的な形状編集機能と血流予測機能を備えた先天性心疾患のための説明用シェーマシステムの開発</b>，
-    日本医療情報学会，第30回連合大会，2010年11月19-21日.
+    日本医療情報学会，第30回 医療情報学連合大会，浜松市，2010年11月19-21日.
 </li>
 <li>
     原口　亮，芦原貴司，八尾武憲，難波経豊，藤堂貴弘，井尻　敬，高山健志，梅谷信行，五十嵐健夫，池田隆徳，中沢一雄, 
